--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body{
   font-family: "Archivo", serif;
 font-size: 12px;
 background: #11111b;
+overflow-x: hidden;
 }
 a{
 text-decoration: none;
@@ -61,6 +62,9 @@ header{
   /* width: 50%; */
   z-index: -1;
   opacity: .9;
+}
+.header-pattern{
+  opacity: .5;
 }
 .header-grad{
   max-width: 600px;
@@ -161,7 +165,7 @@ bottom: 0;
   /* max-width: 1380px; */
   margin: 0 auto;
   padding: 20px;
-  backdrop-filter: blur(23px);
+  backdrop-filter: blur(18px);
   position: relative;
   border: 1px solid rgba(255,255,255,0.1);
   border-radius: 15px;
@@ -717,6 +721,281 @@ padding-bottom: 1rem;
 .token-card p span{
   font-weight: 700;
 }
+/* ROADMAP SECTION */
+.road-container{
+  position: relative;
+}
+.road-obj{
+  position: absolute;
+  right: 0%;
+  top: 15%;
+}
+.road-sect{
+  padding: 20px;
+}
+.road-h{
+font-weight: 600;
+font-size: 32px;
+line-height: 41px;
+letter-spacing: 2px;
+text-align: center;
+background: linear-gradient(to right, #FFFFFF, #DAC8FF 20% );
+background-clip: text;
+-webkit-text-fill-color: transparent;
+padding-block: 1rem;
+
+}
+.road-cards{
+  display: grid;
+  gap: 1rem;
+}
+.road-card{
+  display: grid;
+  gap: 1rem;
+}
+.road-card-h{
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  color: white;
+font-weight: 700;
+font-size: 26px;
+line-height: 36.4px;
+letter-spacing: 2px;
+
+}
+.road-phase-bullet{
+  display: inline-block;
+  background: #15E8884D;
+  border-radius: 50%;
+  width: 22px;
+  height: 22px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.road-phase-bullet span{
+  background: #15E888CC;
+  width: 10.88px;
+  height: 10.88px;
+  border-radius: 50%;
+}
+.road-content{
+  position: relative;
+  padding: 20px;
+  display: grid;
+  gap: 1rem;
+  max-width: 287px;
+  margin: 0 auto;
+  backdrop-filter: blur(15px);
+}
+.road-cont-bg{
+  position: absolute;
+  inset: 0;
+  z-index: -1;
+  
+
+}
+.road-cont-h{
+  display: flex;
+  align-items: end;
+  gap: 1rem;
+  justify-content: space-between;
+}
+.road-cont-h h3{
+font-weight: 600;
+font-size: 25px;
+line-height: 32.5px;
+letter-spacing: 0px;
+background: linear-gradient(180deg, #FFFFFF 0%, #DAC8FF 100%);
+background-clip: text;
+-webkit-text-fill-color: transparent;
+}
+.road-card-logo{
+  max-width: 52px;
+  flex-shrink: 0;
+}
+.road-content ul{
+  padding-left: 20px;
+font-weight: 300;
+font-size: 15px;
+line-height: 20px;
+letter-spacing: 0px;
+list-style: disc;
+color: white;
+background: linear-gradient(97deg, #FFFFFF 33.48%, #B794FC 91.35%);
+background-clip: text;
+-webkit-text-fill-color: transparent;
+
+
+}
+.road-top-title{
+  display: none;
+  align-items: center;
+  justify-content: space-between;
+  
+}
+.road-h-lg{
+flex-grow: 1;
+max-width: 287px;
+padding-left: 2%;
+}
+.road-top-hr{
+  padding-top: 4rem;
+  display: none;
+}
+.road-top-line{
+  background: #83D103;
+  width: 100%;
+  height: 4px;
+  border-radius: 4px;
+}
+.road-top-span{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: -1.6rem;
+}
+.road-top-span>div{
+  max-width: 287px;
+  padding-left: 2%;
+  flex-grow: 1;
+}
+
+.road-hr-b1,
+.road-hr-b2,
+.road-hr-b3 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.road-hr-b1 {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background: rgba(143, 230, 0, 0.2); /* Apply opacity only to background */
+  position: relative; /* Ensure it's the base */
+}
+
+.road-hr-b2 {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  background: rgba(143, 230, 0, 0.3);
+}
+
+.road-hr-b3 {
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background: rgba(143, 230, 0, .4);
+}
+/* TEAMS SECTION */
+.team-sect{
+  padding: 20px;
+}
+.team-h{
+font-weight: 600;
+font-size: 32px;
+line-height: 51px;
+letter-spacing: 2px;
+text-align: center;
+background: linear-gradient(94.47deg, #FFFFFF 6.12%, #DAC8FF 80.25%);
+background-clip: text;
+-webkit-text-fill-color: transparent;
+}
+
+.team-logo-container{
+  position: relative;
+  backdrop-filter: blur(15px);
+  
+}
+.team-logo-bg{
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+}
+.team-logo-h{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px 15px;
+  position: relative;
+}
+.team-p-bg{
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 56%;
+  height: 11%;
+}
+.team-logo-h p{
+font-weight: 500;
+font-size: 10px;
+line-height: 22px;
+letter-spacing: 0px;
+background: linear-gradient(94.47deg, #FFFFFF 6.12%, #DAC8FF 80.25%);
+background-clip: text;
+-webkit-text-fill-color: transparent;
+
+}
+.team-logo-h p:nth-child(2){
+opacity: .5;
+
+}
+.team-logos{
+  padding: 20px;
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  gap: 3rem;
+}
+.team-logo{
+  justify-self: center;
+  max-width: 66px;
+
+}
+.team-logo img{
+  object-fit: contain;
+}
+.team-about .cust-sub-p{
+  padding: 2px 25px;
+}
+.team-about{
+  display: grid;
+  gap: 1rem;
+}
+.team-about h4{
+font-weight: 500;
+font-size: 28px;
+line-height: 38.5px;
+letter-spacing: 0px;
+background: linear-gradient(94.47deg, #FFFFFF 6.12%, #DAC8FF 80.25%);
+background-clip: text;
+-webkit-text-fill-color: transparent;
+}
+.team-about p{
+color: white;
+font-weight: 400;
+font-size: 14px;
+line-height: 28px;
+letter-spacing: 0px;
+
+}
+.team-content{
+  display: grid;
+  gap: 3rem;
+}
+@media screen and (min-width:400px) {
+  .team-logo-h{
+    padding-inline: 40px;
+  }
+  .team-logo-h p{
+    font-size: 12px;
+  }
+
+}
 @media screen and (min-width:768px) {
   .metric-sect{
     grid-template-columns: 1fr 1fr;
@@ -813,6 +1092,8 @@ radial-gradient(at 49% 97%, hsla(260,100%,60%,0.45) 0px, transparent 50%);
     margin-top: -10%;
     /* backdrop-filter: blur(0); */
     position: relative;
+    clip-path: polygon(0% 0%, 23% 0%, 30% 10%, 30% 10%, 100% 10%, 100% 10%, 100% 100%, 100% 100%, 0% 99%, 0% 99%);
+
     
   }
 
@@ -1027,6 +1308,71 @@ line-height: 81px;
             .token-card h4{
               font-size: 25px;
             }
+            .road-h{
+              font-size: 50px;
+              line-height: 81px;
+            }
+            .road-sect{
+              padding: 20px 40px;
+            }
+            .road-cards{
+              margin-top: 1.5rem;
+              display: flex;
+              justify-content: space-between;
+            }
+            .road-card{
+              gap: 5rem;
+            }
+            .road-h-sm{
+              flex-grow: 0;
+              display: none;
+            }
+            .road-content{
+              flex-grow: 1;
+              min-height: 261px;
+            }
+            .road-card:nth-child(3){
+              padding-right: 2%;
+            }
+            .road-top-title{
+              display: flex;
+            }
+            .road-top-hr{
+              display: block;
+            }
+            .team-sect{
+              padding: 20px 40px;
+            }
+            .team-h{
+              font-size: 50px;
+              line-height: 81px;
+              margin-bottom: 3rem;
+            }
+            .team-logo-h{
+              padding-inline: 40px;
+            }
+            .team-logo-h p{
+              font-size: 16px;
+              line-height: 32px;
+              flex-grow: 1;
+              text-align: center;
+            }
+           
+            .team-about h4{
+              font-size: 45px;
+              line-height: 58.5px;
+              }
+              .team-about p{
+              font-size: 16px;
+              line-height: 32px;
+              
+              }
+              .team-content{
+                grid-template-columns: repeat(2,1fr);
+              }
+              .team-logos{
+                padding-top: 80px;
+              }
  
 }
 @media screen and (min-width:1200px) {
@@ -1060,9 +1406,15 @@ line-height: 81px;
    .hero-logo img{
      max-width: 62px;
    }
-   .hero-sect,.about-sect,.metric-sect,.limit-sect,.vis-sect{
+   .hero-sect,.about-sect,.metric-sect,.limit-sect,.vis-sect,.road-sect,.team-sect{
     padding-inline: 60px;
    }
+   .team-logo-h{
+    padding:10px 40px;
+  }
+  .team-logo-h p{
+    font-size: 20px;
+  }
 
 }
 @media screen and (min-width:1320px) {
@@ -1075,5 +1427,8 @@ line-height: 81px;
   .limit-card-top .limit-img-lg{
     max-height: 275px;
 
+   }
+   .team-sect{
+    padding-inline: 80px;
    }
 }
