--- a/style.css
+++ b/style.css
@@ -85,6 +85,9 @@ nav{
   padding: 15px 20px;
   
 }
+.nav-toggler{
+  z-index: 2000;
+}
 .nav-logo{
   display: flex;
   align-items: center;
@@ -116,6 +119,7 @@ nav{
 }
 .nav-list-active{
 bottom: 0;
+z-index: 200000;
 
 }
 .nav-list ul{
@@ -892,6 +896,16 @@ padding-left: 2%;
   background: rgba(143, 230, 0, .4);
 }
 /* TEAMS SECTION */
+.team-container{
+  position: relative;
+}
+.team-obj{
+  position: absolute;
+  left: -10%;
+  top: 85%;
+  z-index: -1;
+  display: none;
+}
 .team-sect{
   padding: 20px;
 }
@@ -908,7 +922,7 @@ background-clip: text;
 
 .team-logo-container{
   position: relative;
-  backdrop-filter: blur(15px);
+  backdrop-filter: blur(10px);
   
 }
 .team-logo-bg{
@@ -939,6 +953,8 @@ letter-spacing: 0px;
 background: linear-gradient(94.47deg, #FFFFFF 6.12%, #DAC8FF 80.25%);
 background-clip: text;
 -webkit-text-fill-color: transparent;
+flex-grow: 1;
+text-align: center;
 
 }
 .team-logo-h p:nth-child(2){
@@ -987,6 +1003,129 @@ letter-spacing: 0px;
   display: grid;
   gap: 3rem;
 }
+/* FOOTER */
+.footer-container{
+  position: relative;
+}
+.foot-sect{
+padding: 20px;
+
+}
+.footer-obj1{
+  position: absolute;
+  left: 0;
+  top: 75%;
+}
+.footer-obj2{
+  position: absolute;
+  right: 25%;
+  top: 60%;
+}
+.footer-obj3{
+  position: absolute;
+  right: 0;
+  top: 30%;
+}
+.footer-content{
+  position: relative;
+  padding: 20px;
+  display: grid;
+  gap: 2rem;
+  backdrop-filter: blur(10px);
+}
+.footer-bg{
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+}
+.footer-grad{
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 90%;
+  display: none;
+}
+.footer-top{
+  display: grid;
+  gap: 1rem;
+}
+
+.footer-top p{
+font-weight: 400;
+font-size: 16px;
+line-height: 30px;
+letter-spacing: 0px;
+color: white;
+text-align: center;
+}
+.footer-logo{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+
+}
+.footer-logo p{
+  color: white;
+font-weight: 700;
+font-size: 32px;
+line-height: 54px;
+letter-spacing: 2px;
+
+}
+.footer-logo img{
+  max-width: 42px;
+}
+.footer-social{
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  justify-content: center;
+}
+.footer-social a{
+  max-width: 27px;
+  display: inline-block;
+}
+.footer-links{
+  display: grid;
+  gap: 2rem;
+}
+.footer-link{
+  display: grid;
+  gap: .5rem;
+}
+.footer-link p{
+font-weight: 500;
+font-size: 20px;
+line-height: 55px;
+letter-spacing: 0%;
+background: linear-gradient(180deg, #FFFFFF 0%, #DAC8FF 100%);
+background-clip: text;
+-webkit-text-fill-color: transparent;
+text-align: center;
+
+
+}
+.footer-link a{
+font-weight: 300;
+font-size: 14px;
+line-height: 22px;
+letter-spacing: 0%;
+color: white;
+opacity: .8;
+text-align: center;
+
+}
+.footer-bottom p{
+font-weight: 300;
+font-size: 12px;
+line-height: 31px;
+letter-spacing: 0%;
+text-align: center;
+color: white;
+
+}
 @media screen and (min-width:400px) {
   .team-logo-h{
     padding-inline: 40px;
@@ -1025,6 +1164,10 @@ letter-spacing: 0px;
   }
   .metric-sect .metric:nth-child(even) .metric-hr{
     display: none;
+  }
+  .team-obj{
+    display: block;
+    left: 1%;
   }
 
 }
@@ -1373,6 +1516,73 @@ line-height: 81px;
               .team-logos{
                 padding-top: 80px;
               }
+              .foot-sect{
+                padding: 40px;
+              }
+              .footer-content{
+                margin-top: 2rem;
+                padding: 40px;
+                display: grid;
+                grid-template-columns: 40% 1fr;
+                align-items: flex-start;
+              }
+              .footer-links{
+                display: grid;
+                grid-template-columns: repeat(3,1fr);
+              }
+            
+              .footer-logo img{
+                max-width: 62px;
+              }
+              .footer-top{
+                max-width: 350px;
+              }
+              .footer-top > p{
+                font-size: 18px;
+                line-height: 32px;
+                text-align: left;
+                margin-bottom: 4rem;
+                }
+                .footer-logo{
+                  justify-self: flex-start;
+                }
+                .footer-logo p{
+                
+                font-size: 45px;
+                
+                }
+                .footer-social{
+                  justify-content: flex-start;
+                  gap: 1.5rem;
+                }
+                .footer-link p{
+                  font-size: 28px;
+                  line-height: 55px;
+                  text-align: left;
+                  
+                  
+                  }
+                  .footer-link a{
+                  font-size: 16px;
+                  line-height: 26px;
+                  text-align: left;
+
+                  
+                  }
+                  .footer-bottom p{
+                    text-align: left;
+                  font-size: 14px;
+                  line-height: 31px;
+                  
+                  }
+                  .footer-bottom{
+                    position: absolute;
+                    bottom: 1%;
+                    right: 0%;
+                  }
+                  .footer-grad{
+                    display: block;
+                  }
  
 }
 @media screen and (min-width:1200px) {
@@ -1406,7 +1616,7 @@ line-height: 81px;
    .hero-logo img{
      max-width: 62px;
    }
-   .hero-sect,.about-sect,.metric-sect,.limit-sect,.vis-sect,.road-sect,.team-sect{
+   .hero-sect,.about-sect,.metric-sect,.limit-sect,.vis-sect,.road-sect,.team-sect,.foot-sect{
     padding-inline: 60px;
    }
    .team-logo-h{
@@ -1414,6 +1624,16 @@ line-height: 81px;
   }
   .team-logo-h p{
     font-size: 20px;
+  }
+  .footer-content{
+    padding-top: 60px;
+    padding-left: 60px;
+  }
+  .footer-top > p{
+    margin-bottom: 5rem;
+  }
+  .footer-bottom{
+    right: 5%;
   }
 
 }
