--- a/style.css
+++ b/style.css
@@ -1020,6 +1020,7 @@ padding: 20px;
   position: absolute;
   right: 25%;
   top: 60%;
+  display: none;
 }
 .footer-obj3{
   position: absolute;
@@ -1126,6 +1127,41 @@ text-align: center;
 color: white;
 
 }
+/* dISCLAIMER */
+.disc-sect{
+  padding: 20px;
+}
+.disc-h{
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 51px;
+  letter-spacing: 2px;
+  text-align: center;
+  background: linear-gradient(94.47deg, #FFFFFF 6.12%, #DAC8FF 80.25%);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  }
+  .disc-content p{
+  color: white;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 28px;
+  letter-spacing: 0px;
+  }
+  .disc-readMore{
+    color: #83D103;
+    text-decoration: underline;
+    cursor: pointer;
+  }
+  .disc-hidden{
+    max-height: 0;
+    overflow: hidden;
+    transition: all .3s ease;
+
+  }
+  .disc-active{
+    max-height: none;
+  }
 @media screen and (min-width:400px) {
   .team-logo-h{
     padding-inline: 40px;
@@ -1486,10 +1522,13 @@ line-height: 81px;
             .team-sect{
               padding: 20px 40px;
             }
-            .team-h{
+            .team-h,.disc-h{
               font-size: 50px;
               line-height: 81px;
               margin-bottom: 3rem;
+            }
+            .disc-h{
+              margin-bottom: 1rem;
             }
             .team-logo-h{
               padding-inline: 40px;
@@ -1505,7 +1544,7 @@ line-height: 81px;
               font-size: 45px;
               line-height: 58.5px;
               }
-              .team-about p{
+              .team-about p,.disc-content p{
               font-size: 16px;
               line-height: 32px;
               
@@ -1518,6 +1557,9 @@ line-height: 81px;
               }
               .foot-sect{
                 padding: 40px;
+              }
+              .footer-obj2{
+                display: block;
               }
               .footer-content{
                 margin-top: 2rem;
@@ -1583,6 +1625,9 @@ line-height: 81px;
                   .footer-grad{
                     display: block;
                   }
+                  .disc-sect{
+                    padding: 40px;
+                  }
  
 }
 @media screen and (min-width:1200px) {
@@ -1616,7 +1661,7 @@ line-height: 81px;
    .hero-logo img{
      max-width: 62px;
    }
-   .hero-sect,.about-sect,.metric-sect,.limit-sect,.vis-sect,.road-sect,.team-sect,.foot-sect{
+   .hero-sect,.about-sect,.metric-sect,.limit-sect,.vis-sect,.road-sect,.team-sect,.foot-sect.disc-sect{
     padding-inline: 60px;
    }
    .team-logo-h{
