--- a/style.css
+++ b/style.css
@@ -482,13 +482,20 @@ letter-spacing: 0px;
 color: #FFFFFF;
 
 }
-.limit-content a{
+.limit-content button{
   text-decoration: underline;
   text-decoration-style: solid;
   text-decoration-thickness: Auto;
   text-decoration-skip-ink: auto;
   color: #83D103
 }
+.limit-hidden{
+  display: none;
+}
+.limit-visible{
+  display: inline;
+}
+
 .limit-img-lg{
   display: none;
 }
@@ -507,6 +514,25 @@ color: #FFFFFF;
   padding: 1px;
   overflow: hidden;
 }
+.limit-card:has(.limit-hidden.limit-visible) .limit-img img{
+  clip-path: polygon(
+    6% 0%,  /* Shifted right */
+    100% 0,    /* Top-right corner */
+    100% 100%, /* Bottom-right corner */
+    0% 100%,   /* Bottom-left corner */
+    0% 5em    /* Shifted down */
+);
+}
+.limit-card-top .limit-card:has(.limit-hidden.limit-visible)  .limit-img img{
+  clip-path: polygon(
+    6% 0%,  /* Shifted right */
+    100% 0,    /* Top-right corner */
+    100% 100%, /* Bottom-right corner */
+    0% 100%,   /* Bottom-left corner */
+    0% 12em    /* Shifted down */
+);
+}
+
 .limit-img img{
   object-fit: cover;
   clip-path: polygon(
@@ -619,6 +645,31 @@ letter-spacing: 0px;
 }
 .vis-card-content .read-btn{
   max-width: 195px;
+  cursor: pointer;
+}
+.vis-hidden{
+  display: none;
+}
+.vis-visible{
+  display: inline;
+}
+.vis-read-btn{
+  position: relative;
+}
+.vis-read-btn p{
+  position: absolute;
+  inset: 0;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+color: #fff;
+
+font-weight: 500;
+font-size: 16px;
+text-transform: capitalize;
 }
 /* TOKEN SECTION */
 .token-container{
@@ -1371,6 +1422,9 @@ radial-gradient(at 49% 97%, hsla(260,100%,60%,0.45) 0px, transparent 50%);
       font-size: 45px;
       line-height: 58.5px;
       }
+      .limit-content{
+        padding-block: 40px;
+      }
       .limit-content h4{
         font-size: 30px;
         line-height: 39px;
@@ -1395,7 +1449,14 @@ radial-gradient(at 49% 97%, hsla(260,100%,60%,0.45) 0px, transparent 50%);
          z-index: -4;
          max-height: 300px;
          overflow: hidden;
+         height: 100%;
 
+        }
+        .limit-card-top:has(.limit-hidden.limit-visible) .limit-img-lg {
+          max-height: none;
+        }
+        .limit-card-top .limit-img-lg img{
+          object-fit: cover;
         }
         .limit-img-lg{
           display: block;
@@ -1690,9 +1751,12 @@ line-height: 81px;
     gap: 1.5rem;
   }
   .limit-card-top .limit-img-lg{
-    max-height: 275px;
+    max-height: 315px;
 
    }
+   .limit-card-top:has(.limit-hidden.limit-visible) .limit-img-lg {
+    max-height: none;
+  }
    .team-sect{
     padding-inline: 80px;
    }
